...
            "state" : "translated",
            "value" : "Для взрослых 18+"
          }
        }
      }
    },
    "Age Restriction" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Altersbeschränkung"
...
            "state" : "translated",
            "value" : "Очистка кэша не затрагивает сохранённые треды."
          }
        }
      }
    },
    "Close" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schließen"
...
            "state" : "translated",
            "value" : "Связаться"
          }
        }
      }
    },
    "Content Reporting (DMCA)" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inhaltsmeldungen (DMCA)"
...
            "state" : "translated",
            "value" : "Конвертация %lld%%"
          }
        }
      }
    },
    "Cookies" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cookies"
...
            "state" : "translated",
            "value" : "Всегда"
          }
        }
      }
    },
    "Forum" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Forum"
...
            "state" : "translated",
            "value" : "Новая тема"
          }
        }
      }
    },
    "New thread" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Neuer Thread"
...
            "state" : "translated",
            "value" : "Часть вашей сессии"
          }
        }
      }
    },
    "Passcode" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Passcode"
...
            "state" : "translated",
            "value" : "Похожие посты"
          }
        }
      }
    },
    "Posts sent" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gesendete Beiträge"
...
            "state" : "translated",
            "value" : "Убрать из избранного"
          }
        }
      }
    },
    "Remove metadata" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Metadaten entfernen"
...
            "state" : "translated",
            "value" : "Ответы мне"
          }
        }
      }
    },
    "Reply" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Antworten"
...
            "state" : "translated",
            "value" : "Ответить на пост"
          }
        }
      }
    },
    "Report" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Melden"
...
            "state" : "translated",
            "value" : "Жалоба отправлена"
          }
        }
      }
    },
    "Reporting & Blocking" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Melden & Blockieren"
...
            "state" : "translated",
            "value" : "Масштаб"
          }
        }
      }
    },
    "Restrictions" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Beschränkungen"
...
            "state" : "translated",
            "value" : "Чтобы включить, задайте код-пароль на устройстве."
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Einstellungen"
...
            "state" : "translated",
            "value" : "Сохранённые треды и доски появятся здесь."
          }
        }
      }
    },
    "Threads opened" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Geöffnete Threads"
...
            "state" : "translated",
            "value" : "Обновить сохранённую копию"
          }
        }
      }
    },
    "Uploads" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Uploads"
...
